fixed spacing issue with search rankings

--- a/styles/search-styles.css
+++ b/styles/search-styles.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 .ranking-row {
-  margin-bottom: 30px;
+  margin: 75px;
   text-align: center;
 }
 
